--- a/package.json
+++ b/package.json
@@ -33,5 +33,12 @@
     "tailwindcss": "^3.4.4",
     "theme-change": "^2.5.0",
     "vite": "^5.3.3"
+  },
+  "dependencies": {
+    "i": "^0.3.7",
+    "leaflet": "^1.9.4",
+    "leaflet-geosearch": "^4.0.0",
+    "npm": "^10.8.2",
+    "react-leaflet": "^4.2.1"
   }
 }
