--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vite": "^5.3.3"
   },
   "dependencies": {
+    "dayjs": "^1.11.11",
     "i": "^0.3.7",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.0.0",
