--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "maatwebsite/excel": "^3.1",
         "react/async": "^4.3",
         "spatie/async": "^1.6.1",
-        "tightenco/ziggy": "^1.8.2"
+        "tightenco/ziggy": "^1.8.2",
+        "barryvdh/laravel-dompdf": "^v2.2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23.1",
